finished-budget/status

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,7 @@
 {
+  "showExportNotification" : "The export has started!",
+  "showImportNotification" : "The import has started!",
+
   "page_company_component": {
     "title": "Companies",
     "action_add": "Add Company",
